--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/sistema_examen_spring_boot
 spring.datasource.username=root
-spring.datasource.password=local
+spring.datasource.password=Huaraz/1597
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
